--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>Quiz Section</title>
+    <!--Angular-->
+    <script src="./bower_components/angular/angular.js"></script>
+    <!--Material-->
+    <script src="./bower_components/angular-animate/angular-animate.js"></script>
+    <script src="./bower_components/angular-aria/angular-aria.js"></script>
+    <script src="./bower_components/angular-material/angular-material.js"></script>
+    <!--New-Router-->
+    <script src="./bower_components/angular-new-router/dist/router.es5.js"></script>
+    <!--App.js-->
+    <script src="./app.js"></script>
 </head>
 <body>
-
+<h1>THis is </h1>
 </body>
 </html>
