--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <script src="./bower_components/angular-new-router/dist/router.es5.js"></script>
     <!--ROUTERS JS-->
     <script src="./components/addquestion/addquestion.js"></script>
-    <script src="./components/columnsection/columnsection.js"></script>
+
     <!--App.js-->
     <script src="./app.js"></script>
 </head>
 
 <body ng-app="app">
 <div ng-controller="AppController as app">
-    <md-button class="md-raised md-primary" ng-click="app.goTocolumnsection()">coloumn section</md-button>
-    <md-button class="md-raised md-primary" ng-click="app.goTogoToAddQuestion()">Add Question</md-button>
+
+    <md-button class="md-raised md-primary" ng-click="app.goToAddQuestion()">Add Question</md-button>
     <!-- <md-button class="md-raised md-primary" ng-click="app.goToEdit()">Edit</md-button>-->
 </div>
 <div ng-viewport></div>
